--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,16 @@
 <html lang="kr">
     <head>
         <title>Video Super Resolution</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+              rel="stylesheet">
+        <script>
+            function req(filename){
+                let xhr = new XMLHttpRequest();
+                xhr.open("POST", "/process/" + filename);
+                xhr.send();
+            }
+        </script>
     </head>
     <body>
         {% block content %}{% endblock %}
